--- a/main.css
+++ b/main.css
@@ -1,10 +1,33 @@
 button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
+  background-color: green;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  padding: 100px;
+}
+.table {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#res {
+  color: red;
+}
+table {
+  background-color: brown;
+}
+body {
+  background-image: url("https://media.istockphoto.com/photos/illustration-tic-tac-toe-xo-game-picture-id595317282?s=612x612");
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
